<resources>
    <string name="app_name">Спортивный таймер</string>
    <string name="enter_sets">Введите число подходов</string>
    <string name="work_time">Время на подход:</string>
    <string name="rest_time">Время на отдых:</string>
    <string name="start_button_text">Старт</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="min">мин</string>
    <string name="sec">с</string>
    <string name="work">Тренировка: подход </string>
    <string name="rest">Отдых</string>
</resources>